baseline/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csoc-system
  labels:
    csoc.js2.org/managed: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: csoc-monitoring
  labels:
    csoc.js2.org/managed: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: csoc-security
  labels:
    csoc.js2.org/managed: "true"
